syntax = "proto3";

package com.github.sebnyberg.wikipedia;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/sebnyberg/wikipedia";

message Revision {
  int32 id = 1;
  google.protobuf.Timestamp ts = 2;
  string text = 3;
}

message Link {
  string target_title = 1;
}
message LinkedPage {
  string page_title = 1;
  int32 page_id = 2;
  repeated Link links = 3;
}

message Page {
  string title = 1;
  int32 id = 2;
  uint32 namespace = 3;
  string redirect_title = 4;
  repeated Revision revisions = 5;
}
